sass/components/_region.scss
/***************************/
/********* Regions **********/
/***************************/

#top-logo {
  width: 150px;
  padding: .5em;
  margin: .5em 0 0;
}

#navigation {
  /* Move the navbar up inside #main's padding. */
  position: absolute;
  top: 0;
  height: 6em;
  width: 100%;
}

#main {
  /* Move all the children of #main down to make room. */
  padding-top: 6em;
  position: relative;
}

#page{
  position: relative; //make the position context of #header
}

#header {  
  @media all and (min-width: 22.5em) { //360px
    display: block;
    position: absolute;
    top: -50px;
    right: 0;
  }
  #block-system-main-menu, 
  #block-locale-language-content,
  #block-locale-language {
    @media all and (min-width: 22.5em) { //360px
    float: right;
    }
  }
  
  #block-system-main-menu{
    display: none;
    @media all and (min-width: 60em) { //960px
    display: block;
    }
  }
  #name-and-slogan {
    @include element-invisible;
  }
  .header__name-and-slogan,
  .header__region {
    float: none;
    ul.menu, 
    ul.language-switcher-locale-url{
      margin: auto 0; 
      li {
        margin: 1em 0 0;
        padding: 0;
        display: inline-block;
        list-style: none;
        a {
          color: $black;
          text-decoration: none;
          @include ease-all;
          border-bottom: 1px solid transparent;
          
          &:hover, &:focus {
            border-bottom: 1px solid lighten($black, 10%);
          }//hover, focus
        }//a
      }//li
    }// ul
    
    ul.menu li{
      &:after{
        color: $black;
        padding: 0 2em 0 2.2em;
        margin: 0;
       content: "|"; 
      }
      &:last-child {
        &:after{
          content: "";
          padding: 0;
        }
      }
    }
    
    ul.language-switcher-locale-url{
      margin-left: 0;
      padding-left: 0;
      float: right;
      li {
       &:after{
         padding: 0;
         margin: 0;
       } 
      }
    }// ul

    #block-menu-menu-contact{
      float: right;
      margin-left: 3rem;
       @media only screen and (min-width:70em){ //1120px
         margin-left: 9rem;
       }
      .menu li:after{
        color: $black;
        padding: 0 1em 0 1em;
        margin: 0;
       content: "|"; 
      }
    }

    .language-link.active{
      display: none;
    }

  }//header-region
  @include clearfix;
  overflow: visible;
  
}// #header

.header-extended{
  padding-left: 10px;
  h2{
    margin: .5em 0 0;
  }
}


#content {

}

.footer-top{
  background-color: #fff;
  padding: 1em 10px;
  margin-top: 1em;
  border-top: 4px double $med-grey;
  
}

.region-footer-top-first, 
.region-footer-top-second{
  @media all and (min-width: 60em) { //960px
    width: 47.5%;
    display: inline-block;
    float: left;
  }
}

.region-footer-top-second{
  @media all and (min-width: 60em) { //960px
    float: right;
  }
}

#footer {
  #block-menu-menu-footer-menu {
    @include clearfix;
    margin-bottom: 0;
  }
  padding-top: .5em;
  padding-bottom: .5em;
  font-size: .8em;
  color: white;
  background-color: $footer;
  text-align: center;
  a{
    color: #fff;
    text-decoration: none;
    @include ease-all;
    padding-bottom: .1em;
    border-bottom: 1px solid transparent;
    
    &:hover, &:focus {
      border-bottom: 1px solid $light-grey;
    }
  }
  p{
    margin: 0;
  }
  ul.menu {
    margin: 0;
    padding: 0;
    li {
      display: inline-block;
      margin: 0;
      padding: 0;
      list-style: none;
      &:after{
        color: darken($light-grey, 40%);
        padding: 1em;
       content: "|"; 
      }
      &:last-child {
        &:after{
          content: "";
          padding: 0;
        }
      }
      a{
        color: #fff;
      }
    }
  }
}

